# rsh1

./: .rshrc  Cargo.toml
src/: main.rs
src/cli_config/: config.rs
src/raw_mode/: mod.rs  rsh_raw.rs
src/rsh_builtin/: builtin_commands.rs  mod.rs
src/utils/: mod.rs  pre_processing_utils.rs
